# exploration

boggle-solver/: .gitignore  flake.nix  go.mod  main.go
boggle-solver/internal/ocr/: go.mod  ocr.go
boggle-solver/internal/solver/: solver.go
boggle-solver/static/: index.html
dithering/: .gitignore  build.zig  flake.nix
dithering/src/: image.zig  main.zig
mandelbrot-set/: README.md  build.sh  flake.nix
mandelbrot-set/src/: main.c
raytracing-renderer/: .gitignore  CMakeLists.txt  README.md  flake.nix  img.ppm  img2.ppm
raytracing-renderer/include/: camera.hpp  colour.hpp  hittable-list.hpp  hittable.hpp  material.hpp  ray.hpp  sphere.hpp
raytracing-renderer/include/math/: interval.hpp  units.hpp  vec3.hpp
raytracing-renderer/include/renderer/: renderer.hpp
raytracing-renderer/include/renderer/backends/: sdl.hpp
raytracing-renderer/include/utils/: random.hpp  thread_pool.hpp
raytracing-renderer/src/: CMakeLists.txt  camera.cpp  camera.hpp  colour.hpp  hittable-list.cpp  hittable-list.hpp  hittable.cpp  hittable.hpp  interval.hpp  main.cpp  material.cpp  material.hpp  ray.cpp  ray.hpp  sphere.cpp  sphere.hpp  utils.hpp  vec3.hpp
raytracing-renderer/src/event_handler/: events.hpp
raytracing-renderer/src/renderer/: renderer.cpp  renderer.hpp
raytracing-renderer/src/renderer/backends/: sdl.cpp  sdl.hpp
raytracing-renderer/src/utils/: constants.hpp  thread_pool.cpp  thread_pool.hpp
